@@ -4,7 +4,7 @@ Tags: page builder, beaver builder, landing page, front-end builder, drag and dr
 Requires at least: 5.2
 Tested up to: 6.9
 Requires PHP: 7.0
-Stable tag: 2.9.4.1
+Stable tag: 2.9.4.2
 License: GPL2+
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 
